# My-Work

./: README.md
JavaScript - Frontend Ticket Management app/: main.js  style.css
Proiect Tonomat - OOP (C++)/: CMakeLists.txt  main.cpp
Proiect Tonomat - OOP (C++)/Headers/: Exception.h  Monede.h  Produse.h  RepositoryGeneric.h  ServiceTonomat.h  ServiceUtilizator.h  Tonomat.h  UI.h  Utilizator.h  Validation.h  teste.h
Proiect Tonomat - OOP (C++)/Sources/: Monede.cpp  Produse.cpp  ServiceTonomat.cpp  ServiceUtilizator.cpp  Tonomat.cpp  UI.cpp  Utilizator.cpp  teste.cpp
Proiect laborator - Python/: README.md  card_client.json  filme.json  main.py  rezervare.json  test_card.json  test_film.json  test_rezervare.json  utiles.py
Proiect laborator - Python/Domain/: add_operation.py  card_client.py  card_client_validator.py  delete_operation.py  delete_operation_loop.py  (+7 more)
ReteaDeSocializare - C++/: CMakeLists.txt  main.cpp  readme.txt
ReteaDeSocializare - C++/Domain/: Mesaj.cpp  Mesaj.h  Prietenie.cpp  Prietenie.h  Utilizator.cpp  Utilizator.h
ReteaDeSocializare - C++/Repository/: RepositoryMesaj.cpp  RepositoryMesaj.h  RepositoryPrietenie.cpp  RepositoryPrietenie.h  RepositoryUtilizator.cpp  RepositoryUtilizator.h  TADArray.h  TADMultime.h
ReteaDeSocializare - C++/Retea/: Retea.cpp  Retea.h
ReteaDeSocializare - C++/Service/: ServiceMesaj.cpp  ServiceMesaj.h  ServicePrietenie.cpp  ServicePrietenie.h  ServiceUtilizator.cpp  ServiceUtilizator.h
ReteaDeSocializare - C++/Tests/: Tests.cpp  Tests.h
ReteaDeSocializare - interfata grafica (Java)/: settings.gradle
(+141 files in other folders)
